# aoc-2023

./: .gitignore  Cargo.toml  README.md  justfile
daily-template/src/: part1.rs  part2.rs
day-01/: Cargo.toml
day-01/src/: part2.rs
day-02/: Cargo.toml
day-02/src/: my_parser.rs  part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: my_parser.rs  part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: my_parser.rs  part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: lib.rs  my_parser.rs  part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: lib.rs  part1.rs  part2.rs  shared.rs
day-09/: Cargo.toml
day-09/src/: part1.rs  part2.rs  shared.rs
day-1/: Cargo.toml
day-1/src/: lib.rs  part1.rs  part2.rs
day-10/: Cargo.toml  Readme.md
day-10/src/: lib.rs  my_parser.rs  part1.rs  part2.rs
day-10/src/types/: connection.rs  coordinates.rs  directions.rs  flood.rs  grid.rs  mod.rs  pipe.rs  shared.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/src/: part1.rs  part2.rs  shared.rs
day-14/: Cargo.toml
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/src/: part1.rs  part2.rs  shared.rs
day-16/: Cargo.toml
day-16/src/: part1.rs  part2.rs  shared.rs
dayly-template/: Cargo.toml
