[package]
name = "day-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
colored = "2.1.0"
nom = { workspace = true }
pathfinding = "4.4.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
