[package]
name = "day-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
glam = "0.24.2"
nom = { workspace = true }
rayon = "1.8.0"
rstest = { workspace = true }
toodee = "0.5.0"
